Updated AML modelling

--- a/AML/Modelling_Matt.ipynb
+++ b/AML/Modelling_Matt.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import HelperFunctions as hf\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,14 +193,14 @@
     "                'sold_lag_7','sold_lag_14','sold_lag_28','rolling_std_7_1','rolling_std_14_1','rolling_std_28_1',\n",
     "               'rolling_std_7_28','price_diff']\n",
     "\n",
-    "cols_to_norm = ['d','wday','month','year','sell_price']\n",
+    "#cols_to_norm = ['d','wday','month','year','sell_price']\n",
     "\n",
     "df[cols_to_norm] = MinMaxScaler().fit_transform(df[cols_to_norm])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,17 +388,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(623339, 59)\n",
-      "(623339,)\n",
-      "(155835, 59)\n",
-      "(155835,)\n"
+      "(558285, 59)\n",
+      "(558285,)\n",
+      "(139572, 59)\n",
+      "(139572,)\n"
      ]
     }
    ],
@@ -1176,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1433,7 @@
        "LinearSVR(C=0.4, epsilon=0.2, random_state=22)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,14 +1446,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error CV: 6.787131686368653\n"
+      "Mean Squared Error CV: 6.776017816198947\n"
      ]
     }
    ],
@@ -1452,6 +1461,26 @@
     "#Cross validation scoring metric\n",
     "cv_score = cross_val_score(svm_reg, X_train, y_train, cv=5, scoring='neg_mean_squared_error')\n",
     "print(\"Mean Squared Error CV:\", -np.mean(cv_score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28481551020712975"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(cv_score)"
    ]
   },
   {
@@ -1596,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1624,6 +1653,7 @@
    ],
    "source": [
     "test_preds = svm_reg.predict(X_test)\n",
+    "mean_squared_error(y_test, test_preds)\n",
     "test_preds"
    ]
   },
@@ -1786,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1802,44 +1832,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ElasticNet(alpha=1, copy_X=True, fit_intercept=True, l1_ratio=0.5,\n",
-       "           max_iter=1000, normalize=False, positive=False, precompute=False,\n",
-       "           random_state=101, selection='cyclic', tol=0.0001, warm_start=False)"
+       "ElasticNet(alpha=1, random_state=102)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "en = ElasticNet(alpha=1, l1_ratio = 0.5, random_state=101)\n",
+    "en = ElasticNet(alpha=1, l1_ratio = 0.5, random_state=102)\n",
     "en.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error CV: 16.871055514922304\n"
+      "Mean Squared Error CV: 8.721282279525603\n"
      ]
     }
    ],
    "source": [
     "#Cross validation scoring metric\n",
-    "cv_score_en = cross_val_score(en, X_train, y_train, cv=10, scoring='neg_mean_squared_error')\n",
+    "cv_score_en = cross_val_score(en, X, y, cv=5, scoring='neg_mean_squared_error')\n",
     "print(\"Mean Squared Error CV:\", -np.mean(cv_score_en))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4877683978963906"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(cv_score_en)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.43138873733081"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_preds = en.predict(X_test[:, 1:])\n",
+    "mean_squared_error(y_test, test_preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.9236051502145922, 0.6666666666666666, 0.09090909090909091, ...,\n",
+       "        0.0, 0.0, 0.0],\n",
+       "       [0.9236051502145922, 0.6666666666666666, 0.09090909090909091, ...,\n",
+       "        0.0, 0.0, 0.0],\n",
+       "       [0.9236051502145922, 0.6666666666666666, 0.09090909090909091, ...,\n",
+       "        0.0, 0.0, 0.004132231404958678],\n",
+       "       ...,\n",
+       "       [0.9999999999999999, 0.33333333333333337, 0.36363636363636365,\n",
+       "        ..., 0.0, 0.0, 0.0],\n",
+       "       [0.9999999999999999, 0.33333333333333337, 0.36363636363636365,\n",
+       "        ..., 0.0, 0.0, 0.008264462809917356],\n",
+       "       [0.9999999999999999, 0.33333333333333337, 0.36363636363636365,\n",
+       "        ..., 0.0, 0.0, 0.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test[:, 1:]"
    ]
   },
   {
@@ -2168,6 +2269,136 @@
    ],
    "source": [
     "mean_squared_error(df_test[df_test['WI'] == 1].sold.values, df_test[df_test['WI'] == 1].preds.values)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gaussian Processes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.gaussian_process import GaussianProcessRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pca = PCA(n_components=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_pca = pca.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Train/test split\n",
+    "X_train_pca, X_val_pca, y_train_pca, y_val_pca = train_test_split(X_pca, y, test_size=0.20, random_state=69)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg = LinearRegression().fit(X_train_pca, y_train_pca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error CV: 8.445188042309416\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Cross validation scoring metric\n",
+    "cv_score_lr = cross_val_score(reg, X_train_pca, y_train_pca, cv=5, scoring='neg_mean_squared_error')\n",
+    "print(\"Mean Squared Error CV:\", -np.mean(cv_score_lr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import BaggingRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpr = BaggingRegressor(base_estimator=GaussianProcessRegressor(), n_estimators=100, random_state=0).fit(X_train_pca, y_train_pca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpr = GaussianProcessRegressor(random_state=0).fit(X_train_pca, y_train_pca)"
    ]
   },
   {
