Cleaned DL Code

--- a/Deep Learning/Figure7.ipynb
+++ b/Deep Learning/Figure7.ipynb
@@ -23,7 +23,9 @@
         "id": "AJKaWyHB-tfN"
       },
       "source": [
-        "# Figure 7"
+        "# Figure 7\n",
+        "\n",
+        "This notebook is used for the recreation of Figure 7 in the paper. This figure shows how models trained on different datasets rely on background signals in making correct classifications. In our reproduction, the models trained in Figure 5 are used here."
       ]
     },
     {
@@ -59,6 +61,7 @@
         "id": "ah30Q1MQwcxJ"
       },
       "source": [
+        "#Function that converts raw data into a PyTorch DataLoader object\n",
         "def getDataLoader(preprocess, datadir = 'mixed_same/val'):\n",
         "    imgFolder = ImageFolder(datadir, transform=preprocess)\n",
         "    testloader = DataLoader(imgFolder, batch_size=1, shuffle=False)\n",
@@ -70,31 +73,10 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fq11hwntw8Xf"
-      },
-      "source": [
-        "def IN9LAccuracy(model, data):\n",
-        "  correct = 0\n",
-        "  total = 0\n",
-        "\n",
-        "  for input, label in data:\n",
-        "    input, label = input.to('cuda:0'), label.to('cuda:0')\n",
-        "    output = model(input).detach()\n",
-        "    output = torch.argmax(output, dim=1)\n",
-        "    correct += torch.sum(output==label).item()\n",
-        "    total += len(output)\n",
-        "\n",
-        "  print(\"Test Accuracy:\", correct/total*100, \"%\")"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "iPQHjSbrzp2U"
       },
       "source": [
+        "#Returns list of whether each observation was predicted correctly\n",
         "def listOfCorrectPreds(model, data):\n",
         "  correct = []\n",
         "\n",
@@ -102,9 +84,7 @@
         "    input, label = input.to('cuda:0'), label.to('cuda:0')\n",
         "    output = model(input).detach()\n",
         "    output = torch.argmax(output, dim=1)\n",
-        "    #print(output)\n",
         "    result = int((output==label).to('cpu').detach().numpy()[0])\n",
-        "    #print(result)\n",
         "    correct.append(result)\n",
         "\n",
         "  return correct"
@@ -118,6 +98,7 @@
         "id": "1ioAqby05LU8"
       },
       "source": [
+        "#Create the dataframe used to plot Figure 7\n",
         "def createDF(index_name, original_preds, mixed_rand_preds, only_bg_t_preds):\n",
         "  #Create dataframe\n",
         "  df = pd.DataFrame({\n",
@@ -5171,6 +5152,7 @@
         "id": "hl39Q0nfv0fm"
       },
       "source": [
+        "#Models will be evaluated using GPU on Google Colab\n",
         "device = 'cuda:0'"
       ],
       "execution_count": null,
@@ -5212,6 +5194,7 @@
         "outputId": "2438f45b-c3aa-48b6-8871-b6ac6fa14cc8"
       },
       "source": [
+        "#Example images\n",
         "import matplotlib.pyplot as plt\n",
         "fig, ax = plt.subplots(nrows=1, ncols=3, figsize=(12, 5))\n",
         "images1, _ = next(iter(original))\n",
@@ -5255,6 +5238,7 @@
         "outputId": "89e15fe7-a07e-4d68-d98b-c5574cd9cf2d"
       },
       "source": [
+        "#Load the ResNet18 model that was trained on Only-BG-T for Figure 5\n",
         "r18 = models.resnet18(pretrained = False).to(device)\n",
         "r18.fc = nn.Sequential(\n",
         "               nn.Linear(r18.fc.in_features, 128),\n",
@@ -5566,6 +5550,7 @@
         "outputId": "871ad8ee-7401-4a9b-a7d5-1acdf0bd70bf"
       },
       "source": [
+        "#Load the ResNet34 model that was trained on Mixed-Rand for Figure 5\n",
         "r34 = models.resnet34(pretrained = False).to(device)\n",
         "r34.fc = nn.Sequential(\n",
         "               nn.Linear(r34.fc.in_features, 128),\n",
@@ -5730,29 +5715,6 @@
             "tags": []
           },
           "execution_count": 35
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "BO3euRb_GtYt",
-        "outputId": "cbbbd5ea-627c-4e75-9446-77323d078de3"
-      },
-      "source": [
-        "IN9LAccuracy(r34, original)"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Test Accuracy: 49.48148148148148 %\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
@@ -5958,6 +5920,7 @@
         "outputId": "2ebfc18b-e14e-454f-f5af-467351b943a1"
       },
       "source": [
+        "#Load the ResNet18 model that was trained on Original for Figure 5\n",
         "model_18 = models.resnet18(pretrained=True).to(device)\n",
         "model_18.avgpool = nn.AdaptiveAvgPool2d((1,1))\n",
         "model_18.fc = nn.Linear(512, 9).to(device)\n",
@@ -6239,6 +6202,7 @@
         "id": "YcIbXN_UL4G6"
       },
       "source": [
+        "#Combine all resulting dataframes\n",
         "figure7_df = pd.concat([mixedrand_df, original_df, onlybgt_df])"
       ],
       "execution_count": null,
@@ -6342,6 +6306,7 @@
         "outputId": "2384a02a-ead8-44fd-816a-f7c9f79d7709"
       },
       "source": [
+        "#Create Figure 7 plot\n",
         "plt.style.use('ggplot')\n",
         "ax = figure7_df.plot.bar(stacked=True, color=['#2e72ad','#d39234','#459b76','#c76526','#c17db8'], figsize=(8, 4))\n",
         "ax.set_xlabel('Training dataset')\n",
