--- a/Deep Learning/Table2RHS.ipynb
+++ b/Deep Learning/Table2RHS.ipynb
@@ -9135,7 +9135,7 @@
         "    !pip install torchbearer\n",
         "    import torchbearer"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9176,7 +9176,7 @@
         "import torchvision\n",
         "import numpy as np"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9202,7 +9202,7 @@
       "source": [
         "!tar -xvf drive/MyDrive/ReproducabilityChallenge/in9l.tar.gz"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -14219,6 +14219,7 @@
         "id": "jhLTCbG8-Pup"
       },
       "source": [
+        "#Load the data into a DataLoader object\n",
         "transform = transforms.Compose([\n",
         "            transforms.Resize(224),\n",
         "            transforms.CenterCrop(224),\n",
@@ -14235,7 +14236,7 @@
         "val_dataset = ImageFolder(\"in9l/val\", transform)\n",
         "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14261,7 +14262,6 @@
         "#Change fully connected layer to output the desired 9 classes, instead of 1000\n",
         "from torchvision.models import resnet50\n",
         "model = resnet50(pretrained=True)\n",
-        "#model.avgpool = nn.AdaptiveAvgPool2d((1,1))\n",
         "model.fc = nn.Linear(2048, len(train_dataset.classes))\n",
         "model.train()"
       ],
@@ -14545,7 +14545,6 @@
         "# define the loss function and the optimiser\n",
         "loss_function = nn.CrossEntropyLoss()\n",
         "\n",
-        "#device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
         "trial = Trial(model, optimiser, loss_function, metrics=['loss', 'accuracy']).to('cuda:0')\n",
         "trial.with_generators(train_loader, val_generator=val_loader)\n",
         "trial.run(epochs=3)\n",
@@ -14894,7 +14893,6 @@
         "# define the loss function and the optimiser\n",
         "loss_function = nn.CrossEntropyLoss()\n",
         "\n",
-        "#device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
         "trial = Trial(alexnet, optimiser, loss_function, metrics=['loss', 'accuracy']).to('cuda:0')\n",
         "trial.with_generators(train_loader, val_generator=val_loader)\n",
         "trial.run(epochs=3)\n",
@@ -15496,7 +15494,6 @@
         "# define the loss function and the optimiser\n",
         "loss_function = nn.CrossEntropyLoss()\n",
         "\n",
-        "#device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
         "trial = Trial(shufflenet, optimiser, loss_function, metrics=['loss', 'accuracy']).to('cuda:0')\n",
         "trial.with_generators(train_loader, val_generator=val_loader)\n",
         "trial.run(epochs=3)\n",
@@ -16029,7 +16026,6 @@
         "# define the loss function and the optimiser\n",
         "loss_function = nn.CrossEntropyLoss()\n",
         "\n",
-        "#device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
         "trial = Trial(wrn, optimiser, loss_function, metrics=['loss', 'accuracy']).to('cuda:0')\n",
         "trial.with_generators(train_loader, val_generator=val_loader)\n",
         "trial.run(epochs=3)\n",
@@ -16241,7 +16237,7 @@
         "vgg.classifier[6] = nn.Linear(4096, len(train_dataset.classes))\n",
         "vgg.train()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -16328,7 +16324,7 @@
         "\n",
         "optimiser = optim.Adam(filter(lambda p: p.requires_grad, vgg.parameters()), lr=1e-4) #only optimse non-frozen layers"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -16403,7 +16399,6 @@
         "# define the loss function and the optimiser\n",
         "loss_function = nn.CrossEntropyLoss()\n",
         "\n",
-        "#device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
         "trial = Trial(vgg, optimiser, loss_function, metrics=['loss', 'accuracy']).to('cuda:0')\n",
         "trial.with_generators(train_loader, val_generator=val_loader)\n",
         "trial.run(epochs=3)\n",
@@ -16411,7 +16406,7 @@
         "print()\n",
         "print(results)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -16587,7 +16582,7 @@
         "#save the trained model weights\n",
         "torch.save(vgg.to('cpu').state_dict(), \"./vggin9l.weights\")"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -16605,6 +16600,7 @@
         "id": "_lZ0iUz9bES7"
       },
       "source": [
+        "#Load data into DataLoader object\n",
         "def getDataLoader(datadir = 'mixed_same/val'):\n",
         "    # convert each image to tensor format\n",
         "    preprocess = transforms.Compose([transforms.Resize(224),\n",
@@ -16612,13 +16608,11 @@
         "                                     transforms.ToTensor(), \n",
         "                                     transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])])\n",
         "\n",
-        "    #datadir = '/Volumes/DRIVE/test_sets/mixed_same/val'\n",
-        "    #datadir = os.path.join('/Volumes/DRIVE/test_sets/mixed_same/', 'val')\n",
         "    imgFolder = ImageFolder(datadir, transform=preprocess)\n",
         "    testloader = DataLoader(imgFolder, batch_size=32, shuffle=False)\n",
         "    return testloader"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -16627,6 +16621,7 @@
         "id": "K9ekduWXbUjG"
       },
       "source": [
+        "#Function computes model accuracy on given dataset\n",
         "def IN9LAccuracy(model, data):\n",
         "  correct = 0\n",
         "  total = 0\n",
@@ -16640,7 +16635,7 @@
         "\n",
         "  print(\"Test Accuracy:\", correct/total*100, \"%\")\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -16658,7 +16653,7 @@
         "!unzip drive/MyDrive/ReproducabilityChallenge/original.zip\n",
         "!unzip drive/MyDrive/ReproducabilityChallenge/mixed_same.zip"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -21678,7 +21673,7 @@
         "#Get the original dataset\n",
         "original = getDataLoader(datadir = 'original/val')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -21690,7 +21685,7 @@
         "#Get the only_bg_t dataset\n",
         "only_bg_t = getDataLoader(datadir = 'only_bg_t/val')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -21699,10 +21694,10 @@
         "id": "01bQ7ogSbsUG"
       },
       "source": [
-        "#Get the mixed_same dataset\n",
+        "#Get the mixed-same dataset\n",
         "mixed_same = getDataLoader(datadir = 'mixed_same/val')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -21711,10 +21706,10 @@
         "id": "2yc704eGbsYM"
       },
       "source": [
-        "#Get the mixed_rand dataset\n",
+        "#Get the mixed-rand dataset\n",
         "mixed_rand = getDataLoader(datadir = 'mixed_rand/val')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -21736,6 +21731,7 @@
         "outputId": "0574011e-5fb0-4a85-d78a-e3a1691fb434"
       },
       "source": [
+        "#Send model to cuda and convert to eval mode\n",
         "model.to('cuda:0')\n",
         "model.eval()"
       ],
@@ -22041,6 +22037,7 @@
         "outputId": "17c34621-e692-40d0-e6c8-90e2b363464a"
       },
       "source": [
+        "#Send model to cuda and convert to eval mode\n",
         "alexnet.to('cuda:0')\n",
         "alexnet.eval()"
       ],
@@ -22197,6 +22194,7 @@
         "outputId": "a11738d8-c9b9-497c-ebfd-c3b12505753f"
       },
       "source": [
+        "#Send model to cuda and convert to eval mode\n",
         "shufflenet.to('cuda:0')\n",
         "shufflenet.eval()"
       ],
@@ -22572,6 +22570,7 @@
         "outputId": "90cbfdbe-abfe-4e1c-af6a-2b159e945ebb"
       },
       "source": [
+        "#Send model to cuda and convert to eval mode\n",
         "wrn.to('cuda:0')\n",
         "wrn.eval()"
       ],
@@ -22877,10 +22876,11 @@
         "outputId": "e8f53d3a-80b2-4262-8679-0d53d4a4a586"
       },
       "source": [
+        "#Send model to cuda and convert to eval mode\n",
         "vgg.to('cuda:0')\n",
         "vgg.eval()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -22965,7 +22965,7 @@
       "source": [
         "IN9LAccuracy(vgg, original)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -22988,7 +22988,7 @@
       "source": [
         "IN9LAccuracy(vgg, only_bg_t)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23011,7 +23011,7 @@
       "source": [
         "IN9LAccuracy(vgg, mixed_same)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -23034,7 +23034,7 @@
       "source": [
         "IN9LAccuracy(vgg, mixed_rand)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
